<resources>
    <string name="app_name">敏捷音乐</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="listen">听</string>
    <string name="look">看</string>
    <string name="sing">唱</string>
    <string name="MyLike">我喜欢</string>
    <string name="song_list">歌单</string>
    <string name="down">下载</string>
    <string name="recent">最近</string>
    <string name="local_song">本地音乐</string>
    <string name="total_number">00首</string>
    <string name="music_library">乐库</string>
    <string name="radio">电台</string>
    <string name="cool_group">酷群</string>
    <string name="tool">工具</string>
    <string name="run">跑步</string>
    <string name="send_song">传歌</string>
    <string name="games">游戏</string>
    <string name="localSongs">本地音乐</string>
    <string name="scanning_songs">扫描歌曲</string>
    <string name="upgrade_source">升级音质</string>
    <string name="match_words">匹配词图</string>
    <string name="sort_by">排序方式</string>
    <string name="play_in_order">顺序播放</string>
    <string name="song_name">歌名</string>
    <string name="singer">歌手</string>
    <string name="net_lxb">流行榜</string>
    <string name="net_gtb">港台榜</string>
    <string name="net_ndb">内地榜</string>
    <string name="singer_song_count">总数</string>
    <string name="folder_fold">文件目录</string>
    <string name="folder_name">文件名称</string>
    <string name="folder">路径</string>
    <string name="think_kugou">感谢【酷狗音乐】对音乐库的内容的支持，音乐版权均归酷狗音乐所有。</string>
    <string name="current_progess">当前进度</string>
    <string name="current_progress">当前进度</string>
    <string name="duration_play">时长</string>
    <string name="load_lrc">正在加载歌词中</string>
    <string name="down_success">下载成功</string>
</resources>
