<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/listen2Color"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bu_love"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/listen2Color"
            android:drawableTop="@drawable/mylove_icon"
            android:gravity="center"
            android:text="@string/MyLike"
            android:textColor="@drawable/text_icon" />

        <Button
            android:id="@+id/bu_song_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/listen2Color"
            android:drawableTop="@drawable/songlist_icon"
            android:gravity="center"
            android:text="@string/song_list"
            android:textColor="@drawable/text_icon" />

        <Button
            android:id="@+id/bu_down"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/listen2Color"
            android:drawableTop="@drawable/down_icon"
            android:gravity="center"
            android:text="@string/down"
            android:textColor="@drawable/text_icon" />

        <Button
            android:id="@+id/bu_recent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/listen2Color"
            android:drawableTop="@drawable/recent_icon"
            android:gravity="center"
            android:text="@string/recent"
            android:textColor="@drawable/text_icon" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/backgroundColor_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/line_localSongs"
        android:background="@color/listen2Color"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/local_song"
            android:textColor="@color/textColorWhite" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"

            android:background="@drawable/local_play_icon" />

        <TextView
            android:id="@+id/tv_song_Count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/textColorWhite"
            android:drawableRight="@mipmap/local_next"
            android:gravity="center_vertical|end"
            android:text="@string/total_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/music_library_icon"
            android:text="@string/music_library" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/radio_icon"
            android:text="@string/radio" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/cool_group"
            android:text="@string/cool_group" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/backgroundColor_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/tool" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center"

            android:text="@string/tool" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/ib_tool_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:background="@drawable/tool_next_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_show_hide"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/shoes_icon"
            android:text="@string/run" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/arrows_horizontal_icon"
            android:text="@string/send_song" />
    </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:background="@color/white">
      <ImageView
          android:layout_marginLeft="15dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:src="@mipmap/games"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_marginLeft="8dp"
          android:gravity="center_vertical"
          android:text="@string/games"/>
  </LinearLayout>
</LinearLayout>