<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="50dp">
<ImageView
    android:id="@+id/iv_folder"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_marginLeft="8dp"
    android:layout_gravity="center"
    android:src="@mipmap/folder_icon"
    />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_folder_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:gravity="bottom|clip_vertical"
            android:text="@string/folder_name"
            android:textColor="@color/textColor_black" />

        <TextView
            android:id="@+id/tv_folder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:maxEms="40"
            android:text="@string/folder_fold"
            android:textColor="@color/textColor_black" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_song_Count"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="end|center_vertical"
        android:text="@string/folder" />
</LinearLayout>