<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background_play"
    tools:context="com.hongqing.minjiemusic.PlayActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/back_title_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@mipmap/back_title_icon"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/songName_play"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/textColorWhite"
            android:text="@string/song_name"
            android:textSize="18dp"/>
        <TextView
            android:id="@+id/singer_play"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text_gray"
            android:textSize="15dp"
            android:text="@string/singer"/>
    </LinearLayout>
</LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_play"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>
    <android.support.design.widget.TabLayout
        android:id="@+id/play_tab"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:fillViewport="false"
        app:tabGravity="center"
        android:background="@android:color/transparent"
        app:tabIndicatorHeight="0dp"
        app:tabSelectedTextColor="@color/textColorBlue"
        app:tabTextColor="@color/text_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
     <ImageView
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:src="@mipmap/love_play_normal"/>
        <ImageView
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:src="@mipmap/down_normal"/>
        <ImageView
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:src="@mipmap/comment_play"/>
         <ImageView
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:src="@mipmap/share_play"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="25dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/current_progress"/>
        <SeekBar
            android:layout_width="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="25dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/duration_play"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:paddingTop="4dp"
        android:layout_marginBottom="15dp">
      <ImageView
          android:id="@+id/radio_play"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_gravity="center"
          android:src="@mipmap/radio_play"/>
          <ImageView
              android:id="@+id/prev_play"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_gravity="center"
          android:src="@mipmap/prev_play_normal"/>
          <ImageView
              android:id="@+id/play"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_gravity="center"
              android:layout_margin="5dp"
          android:src="@mipmap/pasue_play"/>
          <ImageView
              android:id="@+id/next_play"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_gravity="center"
          android:src="@mipmap/next_play"/>
      <ImageView
          android:id="@+id/menu_play"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_gravity="center"
          android:src="@mipmap/menu_play"/>

    </LinearLayout>
</LinearLayout>
